# ECS

./: CMakeLists.txt  README.org
.github/workflows/: build_cmake.yml
src/: ecs.hpp  ecs_utils.hpp  example.cpp
